2003-03-21  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/s390/s390.h: Do not include fixdfdi.h on s390x.
	(TARGET_64BIT): Define as compile-time constant when IN_LIBGCC2.
	(MIN_UNITS_PER_WORD): Do not define when IN_LIBGCC2.

2003-03-21  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	PR doc-bug/9813
	* doc/extend.texi: Move misplaced paragraph about underscores in
	variables in macros.

2003-03-21  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	* doc/invoke.texi: Fix table environment.

2003-03-21 Richard Earnshaw  <rearnsha@arm.com>

	* ifcvt.c (find_if_case_1): If we add a new bb, update the dominance
	information.

2003-03-21  Eric Botcazou  <ebotcazou@libertysurf.fr>
            Richard Henderson  <rth@redhat.com>

	PR optimization/8366
	* config/sparc/sparc.h: (SYMBOLIC_CONST): New macro.
	(GO_IF_LEGITIMATE_ADDRESS): Use it. Reject the form
	PIC+SYMBOLIC_CONST in other modes than Pmode.
	(GO_IF_MODE_DEPENDENT_ADDRESS): Use it. Mark
	the form PIC+SYMBOLIC_CONST as mode dependent.

2003-03-20  Richard Henderson  <rth@redhat.com>

        * fold-const.c (extract_muldiv_1): Revert changing order of
        operands in case MULT_EXPR of 2003-02-16 patch.

2003-03-20  Richard Henderson  <rth@redhat.com>

        PR c/8602
        * integrate.c (output_inline_function): Reset input_filename
        and lineno from the decl before rest_of_compilation.

2003-03-20  Richard Earnshaw  <rearnsha@arm.com>

	PR 10066
	* arm.md (UNSPEC_PIC_BASE): New constant.
	(pic_add_dot_plus_four): Wrap with unspec.
	(pic_add_dot_plus_eight): Likewise.

2003-03-19  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/s390/s390.c (s390_preferred_reload_class): Do not
	force constants to the pool unless necessary.
	(s390_decompose_address): Prefer to use pointer as base,
	not index register.
	* config/s390/s390.md ("*tsthiCCT_only"): Remove '?' from
	Q alternative.
	("*movdi_64", "*movsi", "movhi", "movqi_64", "movqi", 
	"*movdf_64", "*movsf"): Add '?' to Q->Q alternatives.